--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,6 +9,9 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
 
+    permissions:
+      contents: write  # Grant permission to write to the repository
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
